# mrpowers-benchmarks

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  hello.py  pyproject.toml
benchmark-results/: h20_groupby.md  mrpowers_filter.md  mrpowers_multi.md
benchmarks/: __init__.py  daft_h2o_groupby.py  daft_h2o_groupby_queries.py  daft_h2o_join.py  daft_h2o_join_queries.py  daft_single_table_queries.py  dask-h2o-groupby.py  dask_csv_to_parquet.py  dask_h2o_groupby.py  dask_h2o_groupby_csv.py  dask_h2o_groupby_parquet.py  dask_h2o_groupby_queries.py  dask_mrpowers_filter.py  dask_mrpowers_filter_csv.py  dask_mrpowers_filter_parquet.py  dask_mrpowers_filter_queries.py  dask_mrpowers_multi.py  dask_mrpowers_multi_queries.py  datafusion_h2o_groupby.py  datafusion_h2o_groupby_csv.py  datafusion_h2o_groupby_queries.py  datafusion_h2o_join.py  datafusion_h2o_join_queries.py  datafusion_single_table_queries.py  duckdb_h2o_groupby.py  duckdb_h2o_groupby_queries.py  duckdb_h2o_join_queries.py  helpers.py  pandas_h2o_groupby.py  pandas_h2o_groupby_queries.py  polars-h2o-groupby.py  polars_h2o_groupby.py  polars_h2o_groupby_csv.py  polars_h2o_groupby_queries.py  polars_h2o_join.py  polars_h2o_join_queries.py  polars_mrpowers_filter.py  polars_single_table_queries.py  pyspark_h2o_groupby.py  pyspark_h2o_groupby_csv.py  (+9 more)
envs/: mr-dask.yml  mr-datafusion.yml  mr-modin.yml  mr-polars.yml  mr-pyspark.yml  mr-r.yml  mr-vaex.yml  mrpowers-benchmarks.yml  rscript.yml
notebooks/: create-h2o-parquet-dask.ipynb  create-h2o-parquet-polars.ipynb  create-h2o-parquet.ipynb  h20-eda.ipynb  (+14 more)
(+13 files in other folders)
