[project]
name = "mrpowers-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datafusion>=47.0.0",
    "duckdb>=1.3.1",
    "getdaft>=0.4.18",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "polars>=1.31.0",
]
